--- a/yolov8/CMakeLists.txt
+++ b/yolov8/CMakeLists.txt
@@ -15,7 +15,7 @@ file(GLOB CPPS
   ${CMAKE_CURRENT_SOURCE_DIR}/../utils/*.cpp
   ${TensorRT_ROOT}/samples/common/logger.cpp 
   ${TensorRT_ROOT}/samples/common/sampleOptions.cpp
-  #${TensorRT_ROOT}/samples/common/sampleUtils.cpp
+  ${TensorRT_ROOT}/samples/common/sampleUtils.cpp
   )
 list(REMOVE_ITEM CPPS app_yolov8.cpp)
 message(STATUS CPPS = ${CPPS})
